backend/k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: guitarstore
  labels:
    name: guitarstore
